--- a/views/pages/db.ejs
+++ b/views/pages/db.ejs
@@ -13,7 +13,7 @@
 
 <ul>
     <% results.forEach(function(r) { %>
-        <li><%= r.id %> - <%= r.date %> - <%= r.date %></li>
+        <li><%= r.id %> - <%= r.date %> - <%= r.env_data %></li>
     <% }); %>
 </ul>
 
