--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -5,6 +5,7 @@
   </head>
   <body>
     Nothing here. Go to <a href="./test_logs">Logs</a>
+    Go to <a href="./test_table">Logs</a>
     <form method="POST" action="/createUser">
       <div>Username: <input type="text" name="username" id="username" /></div>
       <div>Email: <input type="text" name="email" id="email" /></div>
