--- a/views/pages/test_table.ejs
+++ b/views/pages/test_table.ejs
@@ -44,7 +44,7 @@
     }
     
     function updateData() {
-        $.getJSON("localhost:5000/getlogs?device_id=11", addData);
+        $.getJSON("https://sd-env-logs-server.herokuapp.com/getlogs?device_id=11", addData);
     }
     
     }
