--- a/views/pages/test_table.ejs
+++ b/views/pages/test_table.ejs
@@ -12,6 +12,10 @@
         title: {
             text: "Live Data"
         },
+        axisY:{
+          minimum: 50,
+          maximum: 150
+        },
         data: [{
             type: "line",
             dataPoints: dataPoints
@@ -25,18 +29,10 @@
     var newDataCount = 6;
     
     function addData(data) {
-        if(newDataCount != 1) {
-            $.each(data, function(key, value) {
-                dataPoints.push({x: value[0], y: parseInt(value[1])});
-                xValue++;
-                yValue = parseInt(value[1]);
-            });
-        } else {
             //dataPoints.shift();
-            dataPoints.push({x: xValue, y: data.tvoc});
+            dataPoints.push({x: xValue, y: data.logs[0].tvoc});
             xValue++;
-            yValue = data.tvoc;
-        }
+            yValue = data.logs[0].tvoc;
         
         newDataCount = 1;
         chart.render();
