--- a/views/pages/test_table.ejs
+++ b/views/pages/test_table.ejs
@@ -13,7 +13,8 @@
             text: "Live Data"
         },
         axisY:{
-          maximum: 150
+          minimum: 0
+          ,maximum: 150
         },
         data: [{
             type: "line",
