--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -4,9 +4,11 @@
     <% include ../partials/header.ejs %>
   </head>
   <body>
+    text-align: center;
     Nothing here. Go to <a href="./test_logs">Logs</a>
     Go to <a href="./test_table">Table</a>
     <form method="POST" action="/createUser">
+      display: inline-block;
       <div>Username: <input type="text" name="username" id="username" /></div>
       <div>Email: <input type="text" name="email" id="email" /></div>
       <div>Password: <input type="password" name="passw" id="passw" /></div>
