--- a/views/pages/test_table.ejs
+++ b/views/pages/test_table.ejs
@@ -1,6 +1,218 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
+h2 {
+  color: #3F3E3E;
+  margin: 10px auto;
+  font-weight: bold;
+  padding-top: 15px; 
+  width: 90%;
+}
+
+.data-table {
+    font-family: 'Roboto';
+    border-collapse: collapse;
+    margin-top: 50px;
+    width: 90%;
+    margin: 10px auto; 
+  }
+  
+  th {
+    font-family: 'Roboto';
+    font-weight: bold;
+    border: 1px solid #3F3E3E;
+    color: #3f48cc;
+    padding: 15px;
+    font-size: 22px;
+  }
+  
+  td {
+    font-family: 'Roboto';
+    border: 1px solid #3F3E3E;
+    margin: 0px auto;
+    width: 20%;
+    padding: 15px;
+    font-size: 16px;
+  }
+  
+  tr:nth-child(even) {
+    background-color: #dddddd;
+  }
+
+  #table1 table {
+    font-family: 'Roboto';
+    margin: 0 auto;
+    width: 90%;
+  }
+
+  #table2 table {
+    font-family: 'Roboto';
+    margin: 0 auto;
+    width: 90%;
+  }
+
+  #table3 table {
+    font-family: 'Roboto';
+    margin: 0 auto;
+    width: 90%;
+  }
+
+  #table4 table {
+    font-family: 'Roboto';
+    margin: 0 auto;
+    width: 90%;
+  }
+
+  #table5 table {
+    font-family: 'Roboto';
+    margin: 0 auto;
+    width: 90%;
+  }
+
+  #table6 table {
+    font-family: 'Roboto';
+    margin: 0 auto;
+    width: 90%;
+  }
+
+  #table7 table {
+    font-family: 'Roboto';
+    margin: 0 auto;
+    width: 90%;
+  }
+
+  #table8 table {
+    font-family: 'Roboto';
+    margin: 0 auto;
+    width: 90%;
+  }
+
+  /* Current css for login and register php */
+
+  
+  .error {
+    width: 20%; 
+    margin: 10px auto; 
+    padding: 10px; 
+    border: 1px solid #a94442; 
+    color: #a94442; 
+    background: #f2dede; 
+    border-radius: 5px; 
+    text-align: left;
+  }
+  
+  .logout-content a{
+    font-size: 22px;
+  font-weight: bold;
+    text-decoration: none;
+    color: #3f48cc;
+  }
+
+.logout-content a{
+  font-size: 22px;
+  font-weight: bold;
+  color: #a94442;
+}
+
+.signup-header{
+  font-family: 'Lato', sans-serif;
+  width: 20%;
+  margin: 50px auto 0px;
+  color: white;
+  background: #3f48cc;
+  text-align: center;
+  border: 1px solid #3f48cc;
+  border-bottom: none;
+  border-radius: 10px 10px 0px 0px;
+  padding: 20px;
+}
+
+.input-group {
+  font-family: 'Lato', sans-serif;
+  margin: 20px auto 0px;
+  width: 20%;
+}
+
+.reg-button {
+  padding-top: 25px;
+  text-align: center;
+}
+
+
+.input-group label {
+  font-family: 'Lato', sans-serif;
+  text-align: center;
+}
+
+.input-group input {
+  font-family: 'Lato', sans-serif;
+  height: 30px;
+  width: 100%;
+  padding: 5px 5px;
+  font-size: 16px;
+  border-radius: 5px;
+  border: 1px solid black;
+}
+
+.member-text p {
+  font-family: 'Lato', sans-serif;
+  text-align: center;
+}
+
+ .btn {
+  font-family: 'Lato', sans-serif;
+  text-align: center;
+  padding: 10px;
+  font-size: 15px;
+  color: white;
+  background: #3f48cc;
+  border: none;
+  border-radius: 5px;
+}
+
+.contact_error {
+  width: 100%; 
+  margin: 10px auto; 
+  padding: 10px; 
+  border: 1px solid #a94442; 
+  color: #a94442; 
+  background: #f2dede; 
+  border-radius: 5px; 
+  text-align: left;
+}
+
+.error {
+  width: 20%; 
+  margin: 10px auto; 
+  padding: 10px; 
+  border: 1px solid #a94442; 
+  color: #a94442; 
+  background: #f2dede; 
+  border-radius: 5px; 
+  text-align: left;
+}
+.success  {
+  width: 100%; 
+  margin: 10px auto; 
+  padding-bottom: 10px; 
+  border: 1px solid #53a653; 
+  color: #53a653; 
+  background: #90EE90; 
+  border-radius: 5px; 
+  text-align: left;
+}
+
+.success h3 {
+  font-family: 'Lato', sans-serif;
+  color: #53a653;
+  text-align: center;
+
+}
+
+  </style>
   <% include ../partials/header.ejs %>
   <script>
     window.onload = function() {
@@ -60,17 +272,16 @@
 </head>
 
 <body>
-<div class="container">
-<h2>Database Results</h2>
 
+<h2 style="text-align: center;">Database Results</h2>
 
-<table border="1">
-  <caption>Table Caption</caption>
+<div id="table1">
+<table class="table table-bordered pagin-table">
   <thead>
     <tr>
-     <th>ID</th>
-     <th>Date</th>
-     <th>Environment Data</th>
+     <th style="text-align: left;">ID</th>
+     <th style="text-align: left;">Date</th>
+     <th style="text-align: left;">Environment Data</th>
     </tr>
   </thead>
   <tbody>
@@ -83,9 +294,6 @@
     <% }); %>
   </tbody>
 </table>
-
-
 </div>
-
 </body>
 </html>
