--- a/views/pages/test_table.ejs
+++ b/views/pages/test_table.ejs
@@ -5,7 +5,7 @@
     @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
 h2 {
-  color: #3F3E3E;
+  color: rgb(255, 255, 255);
   margin: 10px auto;
   font-weight: bold;
   padding-top: 15px; 
