--- a/views/pages/myDevices.ejs
+++ b/views/pages/myDevices.ejs
@@ -303,13 +303,14 @@ h2 {
       map.fitBounds(group.getBounds().pad(0.5));
     }
     document.addEventListener('DOMContentLoaded', function() {
-      document.getElementById("isSaved").onclick = function() {
+      document.getElementById("save").onclick = function() {
       markers.forEach(function(el) {
+        alert("here")
         var xmlhttp = new XMLHttpRequest();   // new HttpRequest instance 
-        xmlhttp.open("POST", "/addcoords");
+        xmlhttp.open("POST", "https://sd-env-logs-server.herokuapp.com/addcoords");
         xmlhttp.setRequestHeader("Content-Type", "application/json");
         xmlhttp.send(JSON.stringify({device_id:el.id, latlon:el.getLatLng().lat + ", " + el.getLatLng().lng}));
-        document.getElementById("save").innerHTML = "Device coordinates saved"
+        document.getElementById("isSaved").innerHTML = "Device coordinates saved"
       })
     }
     });
